add correct render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 ﻿services:
   - type: web
     name: object_detection_app
-    env: python
+    runtime: python
     plan: free
     buildCommand: pip install -r backend/requirements.txt
     startCommand: gunicorn backend.app:app
