--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,17 @@
-flask
-gunicorn
-ultralytics
-opencv-python-headless
-deepface
-tf-keras
-tensorflow==2.16.1
-yt-dlp
-reportlab
-pillow
-numpy
+flask==3.0.3
+gunicorn==22.0.0
+ultralytics==8.3.0
+opencv-python-headless==4.10.0.84
+pillow==10.4.0
+numpy==1.26.4
+torch==2.2.2
+torchvision==0.17.2
+yt-dlp==2025.1.26
+reportlab==4.2.5
+psutil==6.0.0
+pyyaml==6.0.2
+requests==2.32.3
+scipy==1.13.1
+matplotlib==3.9.0
+seaborn==0.13.2
+tqdm==4.66.4
