--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,7 +18,8 @@ tqdm==4.66.4
 
 # DeepFace + TensorFlow compatible versions
 deepface==0.0.93
-tensorflow==2.16.1
+tensorflow-cpu==2.16.1
 tf-keras==2.16.0
+keras==2.16.0
 retina-face==0.0.17
 mtcnn==1.0.0
