--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,8 @@ scipy==1.13.1
 matplotlib==3.9.0
 seaborn==0.13.2
 tqdm==4.66.4
+lap==0.5.12
+
 
 # DeepFace + TensorFlow compatible versions
 deepface==0.0.93
