--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@
     runtime: python
     plan: free
     buildCommand: pip install -r backend/requirements.txt
-    startCommand: cd backend && gunicorn app:app --bind 0.0.0.0:$PORT
+    startCommand: cd backend && gunicorn app:app --bind 0.0.0.0:$PORT --timeout 300 --workers 1 --threads 2
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.13
